Minor custom CSS fixes; font-size on smaller screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -61,7 +61,7 @@ font-style: italic;
 
 .site-footer {
   border-top: 3px solid #a40000;
-  padding: 30px 0; }
+  padding: 20px; }
 
 	.post-title {
 	font-size: 25px;
@@ -69,19 +69,5 @@ font-style: italic;
 	line-height: 1; }
 	@media screen and (max-width: 800px) {
 		.post-title {
-			font-size: 36px; } }
-
-h1, h2, h3, h4, h5, h6
-
-a {
- color: #111;
- text-decoration: none; }
- a:visited {
-	 color: #111; }
- a:hover {
-	 color: #111;
-	 text-decoration: underline; }
- .social-media-list a:hover {
-	 text-decoration: none; }
-	 .social-media-list a:hover .username {
-		 text-decoration: underline; }
+			font-size: 25px; }
+}
